RESOLVED FIXED321593
[Web Automation] Element Click targets the wrong position inside a cross-origin iframe under Site Isolation
https://bugs.webkit.org/show_bug.cgi?id=321593
Summary [Web Automation] Element Click targets the wrong position inside a cross-orig...
Razvan Caliman
Reported 2026-08-12 06:25:52 PDT
The coordinates that WebAutomationSessionProxy::computeElementLayout() returns are relative to the frame's local root, because a frame's web process cannot see where that frame sits within the main page. With Site Isolation enabled, a cross-origin iframe's local root is the iframe itself, so the reported in-view center point is missing the frame's offset within the main page.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-08-12 06:25:57 PDT
Razvan Caliman
Comment 2 2026-08-12 07:27:47 PDT
EWS
Comment 3 2026-08-18 10:20:23 PDT
Committed 319384@main (fe0e6eb35c7b): <https://commits.webkit.org/319384@main> Reviewed commits have been landed. Closing PR #71439 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.