[Web Automation] Element Click targets the wrong position inside a cross-origin iframe under Site Isolation https://bugs.webkit.org/show_bug.cgi?id=321593 rdar://184713255

Reviewed by BJ Burg.

The `LayoutViewport` coordinates that `WebAutomationSessionProxy::computeElementLayout()`
reports are relative to the frame's local root, because a frame's web process cannot see
where that frame sits within the page. With Site Isolation enabled, a cross-origin iframe's
local root is the iframe itself, so the reported in-view center point is missing the frame's
offset within the page. The Automation client feeds that point to the pointer input
dispatcher, which synthesizes events at a page-level position, so Element Click lands
somewhere other than the element.

Finish the conversion in the UI process, which is the only side that knows the whole frame
tree. The web process now stops at local root contents coordinates when its local root is
not the main frame, and `WebAutomationSession` walks them up to the main frame with the
existing `convertRectToMainFrameCoordinates()` and `convertPointToMainFrameCoordinates()`.

Those return main frame root view coordinates, which include the obscured content inset area,
whereas the `LayoutViewport` space excludes it and consumers add it back when synthesizing
events (see `viewportLocationToWindowLocation()`); subtract the insets so both paths report
the same space.

Without Site Isolation a frame's local root is always the main frame, so the new conversion
does not run and behavior is unchanged.

* Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::localRootFrameNeedingMainFrameConversion):
(WebKit::obscuredContentInsetOffset):
(WebKit::WebAutomationSession::computeElementLayout):
(WebKit::WebAutomationSession::viewportInViewCenterPointOfElement):
* Source/WebKit/WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::computeElementLayout):

Canonical link: https://commits.webkit.org/319384@main