Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp
@@ -1608,6 +1608,44 @@ static std::optional<CoordinateSystem> NODELETE protocolStringToCoordinateSystem
     return std::nullopt;
 }
 
+// WebAutomationSessionProxy::computeElementLayout() can't produce main-frame-relative
+// LayoutViewport coordinates for an out-of-process frame, because that frame's web process cannot
+// see where the frame sits within the page. It stops at the frame's local root and leaves the rest
+// to the UI process, since only it can traverse the whole frame tree.
+static std::optional<WebCore::FrameIdentifier> localRootFrameNeedingMainFrameConversion(std::optional<WebCore::FrameIdentifier> frameID, CoordinateSystem coordinateSystem)
+{
+    if (coordinateSystem != CoordinateSystem::LayoutViewport)
+        return std::nullopt;
+
+    RefPtr frame = WebFrameProxy::webFrame(frameID);
+    if (!frame)
+        return std::nullopt;
+
+    Ref localRootFrame = frame->rootFrame();
+    if (localRootFrame->isMainFrame())
+        return std::nullopt;
+
+    return localRootFrame->frameID();
+}
+
+// convertRectToMainFrameCoordinates() and convertPointToMainFrameCoordinates() produce main frame
+// *root view* coordinates, which include the obscured content inset area. The LayoutViewport space
+// the Automation protocol reports excludes it. The web process arrives at it via
+// LocalFrameView::rootViewToContents(), which subtracts the insets, and consumers add them back
+// (see viewportLocationToWindowLocation() when synthesizing events). Drop the insets here so both
+// the site-isolated and non-isolated paths report the same space.
+//
+// FIXME: https://bugs.webkit.org/show_bug.cgi?id=322023 - Element coordinates in cross-origin iframes under Site Isolation omit the page scale and layout viewport offset
+// The non-Site Isolation path also divides by Frame::frameScaleFactor()
+// and subtracts FrameView::layoutViewportRect().location(), ScrollView::headerHeight() and insetForLeftScrollbarSpace().
+// Those cancel out at frame scale 1 with no header banner or left-hand scrollbar.
+// But under pinch zoom the reported coordinates are off by roughly the page scale factor and Element Click misses the element.
+static WebCore::FloatSize obscuredContentInsetOffset(WebPageProxy& page)
+{
+    auto insets = page.obscuredContentInsets();
+    return { -insets.left(), -insets.top() };
+}
+
 void WebAutomationSession::computeElementLayout(const Inspector::Protocol::Automation::BrowsingContextHandle& browsingContextHandle, const Inspector::Protocol::Automation::FrameHandle& frameHandle, const Inspector::Protocol::Automation::NodeHandle& nodeHandle, std::optional<bool>&& optionalScrollIntoViewIfNeeded, Inspector::Protocol::Automation::CoordinateSystem coordinateSystemValue, CommandCallbackOf<Ref<Inspector::Protocol::Automation::Rect>, RefPtr<Inspector::Protocol::Automation::Point>, bool>&& callback)
 {
     auto page = webPageProxyForHandle(browsingContextHandle);
@@ -1620,35 +1658,64 @@ void WebAutomationSession::computeElementLayout(const Inspector::Protocol::Autom
     std::optional<CoordinateSystem> coordinateSystem = protocolStringToCoordinateSystem(coordinateSystemValue);
     ASYNC_FAIL_WITH_PREDEFINED_ERROR_AND_DETAILS_IF(!coordinateSystem, InvalidParameter, "The parameter 'coordinateSystem' is invalid."_s);
 
-    WTF::CompletionHandler<void(std::optional<String>&&, WebCore::FloatRect&&, std::optional<WebCore::IntPoint>&&, bool)> completionHandler = [callback = WTF::move(callback)](std::optional<String> optionalError, WebCore::FloatRect rect, std::optional<WebCore::IntPoint> inViewCenterPoint, bool isObscured) mutable {
+    WTF::CompletionHandler<void(std::optional<String>&&, WebCore::FloatRect&&, std::optional<WebCore::IntPoint>&&, bool)> completionHandler = [callback = WTF::move(callback), page = protect(*page), frameID, coordinateSystem = *coordinateSystem](std::optional<String> optionalError, WebCore::FloatRect rect, std::optional<WebCore::IntPoint> inViewCenterPoint, bool isObscured) mutable {
         ASYNC_FAIL_WITH_PREDEFINED_ERROR_IF_SET(optionalError);
 
-        auto originObject = Inspector::Protocol::Automation::Point::create()
-            .setX(rect.x())
-            .setY(rect.y())
-            .release();
+        auto buildAndRespond = [callback = WTF::move(callback)](std::optional<WebCore::FloatRect> optionalRect, std::optional<WebCore::IntPoint> inViewCenterPoint, bool isObscured) mutable {
+            ASYNC_FAIL_WITH_PREDEFINED_ERROR_AND_DETAILS_IF(!optionalRect, InternalError, "Failed to convert the element's layout into main frame coordinates."_s);
+            auto rect = *optionalRect;
 
-        auto sizeObject = Inspector::Protocol::Automation::Size::create()
-            .setWidth(rect.width())
-            .setHeight(rect.height())
-            .release();
+            auto originObject = Inspector::Protocol::Automation::Point::create()
+                .setX(rect.x())
+                .setY(rect.y())
+                .release();
 
-        auto rectObject = Inspector::Protocol::Automation::Rect::create()
-            .setOrigin(WTF::move(originObject))
-            .setSize(WTF::move(sizeObject))
-            .release();
+            auto sizeObject = Inspector::Protocol::Automation::Size::create()
+                .setWidth(rect.width())
+                .setHeight(rect.height())
+                .release();
 
-        if (!inViewCenterPoint) {
-            callback({ { WTF::move(rectObject), nullptr, isObscured } });
-            return;
-        }
+            auto rectObject = Inspector::Protocol::Automation::Rect::create()
+                .setOrigin(WTF::move(originObject))
+                .setSize(WTF::move(sizeObject))
+                .release();
 
-        auto inViewCenterPointObject = Inspector::Protocol::Automation::Point::create()
-            .setX(inViewCenterPoint.value().x())
-            .setY(inViewCenterPoint.value().y())
-            .release();
+            if (!inViewCenterPoint) {
+                callback({ { WTF::move(rectObject), nullptr, isObscured } });
+                return;
+            }
 
-        callback({ { WTF::move(rectObject), WTF::move(inViewCenterPointObject), isObscured } });
+            auto inViewCenterPointObject = Inspector::Protocol::Automation::Point::create()
+                .setX(inViewCenterPoint.value().x())
+                .setY(inViewCenterPoint.value().y())
+                .release();
+
+            callback({ { WTF::move(rectObject), WTF::move(inViewCenterPointObject), isObscured } });
+        };
+
+        // Under site isolation the frame's web process reports LayoutViewport coordinates relative
+        // to the frame's local root; finish walking them up to the main frame here.
+        auto localRootFrameID = localRootFrameNeedingMainFrameConversion(frameID, coordinateSystem);
+        if (!localRootFrameID)
+            return buildAndRespond(rect, inViewCenterPoint, isObscured);
+
+        page->convertRectToMainFrameCoordinates(rect, *localRootFrameID, [page, localRootFrameID = *localRootFrameID, inViewCenterPoint, isObscured, buildAndRespond = WTF::move(buildAndRespond)](std::optional<WebCore::FloatRect> convertedRect) mutable {
+            if (convertedRect)
+                convertedRect->move(obscuredContentInsetOffset(page.get()));
+
+            if (!convertedRect || !inViewCenterPoint)
+                return buildAndRespond(convertedRect, std::nullopt, isObscured);
+
+            page->convertPointToMainFrameCoordinates(WebCore::FloatPoint { *inViewCenterPoint }, localRootFrameID, [page, convertedRect, isObscured, buildAndRespond = WTF::move(buildAndRespond)](std::optional<WebCore::FloatPoint> convertedPoint) mutable {
+                // A converted rect with an unconvertible center point still describes the element,
+                // so report the rect and let the client treat the element as having no in-view
+                // center point, matching the web process's own behavior for that case.
+                if (convertedPoint)
+                    convertedPoint->move(obscuredContentInsetOffset(page.get()));
+
+                buildAndRespond(convertedRect, convertedPoint ? std::optional { WebCore::flooredIntPoint(*convertedPoint) } : std::nullopt, isObscured);
+            });
+        });
     };
 
     bool scrollIntoViewIfNeeded = optionalScrollIntoViewIfNeeded && *optionalScrollIntoViewIfNeeded;
@@ -2345,7 +2412,7 @@ SimulatedInputDispatcher& WebAutomationSession::inputDispatcherForPage(WebPagePr
 // MARK: SimulatedInputDispatcher::Client API
 void WebAutomationSession::viewportInViewCenterPointOfElement(WebPageProxy& page, std::optional<FrameIdentifier> frameID, const Inspector::Protocol::Automation::NodeHandle& nodeHandle, Function<void(std::optional<WebCore::IntPoint>, std::optional<AutomationCommandError>)>&& completionHandler)
 {
-    WTF::CompletionHandler<void(std::optional<String>&&, WebCore::FloatRect&&, std::optional<WebCore::IntPoint>&&, bool)> didComputeElementLayoutHandler = [completionHandler = WTF::move(completionHandler)](std::optional<String>&& optionalError, WebCore::FloatRect&&, std::optional<WebCore::IntPoint>&& inViewCenterPoint, bool) mutable {
+    WTF::CompletionHandler<void(std::optional<String>&&, WebCore::FloatRect&&, std::optional<WebCore::IntPoint>&&, bool)> didComputeElementLayoutHandler = [completionHandler = WTF::move(completionHandler), page = protect(page), frameID](std::optional<String>&& optionalError, WebCore::FloatRect&&, std::optional<WebCore::IntPoint>&& inViewCenterPoint, bool) mutable {
         if (optionalError) {
             completionHandler(std::nullopt, AUTOMATION_COMMAND_ERROR_WITH_MESSAGE(*optionalError));
             return;
@@ -2356,7 +2423,24 @@ void WebAutomationSession::viewportInViewCenterPointOfElement(WebPageProxy& page
             return;
         }
 
-        completionHandler(inViewCenterPoint, std::nullopt);
+        // This is the point synthesized pointer events are dispatched at, so it must be in main
+        // frame viewport coordinates. Under site isolation the web process could only report it
+        // relative to the frame's local root, so finish the conversion here.
+        auto localRootFrameID = localRootFrameNeedingMainFrameConversion(frameID, CoordinateSystem::LayoutViewport);
+        if (!localRootFrameID) {
+            completionHandler(inViewCenterPoint, std::nullopt);
+            return;
+        }
+
+        page->convertPointToMainFrameCoordinates(WebCore::FloatPoint { *inViewCenterPoint }, *localRootFrameID, [page, completionHandler = WTF::move(completionHandler)](std::optional<WebCore::FloatPoint> convertedPoint) mutable {
+            if (!convertedPoint) {
+                completionHandler(std::nullopt, AUTOMATION_COMMAND_ERROR_WITH_NAME(TargetOutOfBounds));
+                return;
+            }
+
+            convertedPoint->move(obscuredContentInsetOffset(page.get()));
+            completionHandler(WebCore::flooredIntPoint(*convertedPoint), std::nullopt);
+        });
     };
 
     page.sendWithAsyncReplyToProcessContainingFrameWithoutDestinationIdentifier(frameID, Messages::WebAutomationSessionProxy::ComputeElementLayout(page.webPageIDInProcessForFrame(frameID), frameID, nodeHandle, false, CoordinateSystem::LayoutViewport), WTF::move(didComputeElementLayoutHandler));
